Fix drag-drop on firefox and safari

--- a/less/cards.less
+++ b/less/cards.less
@@ -101,6 +101,7 @@
   left: 0;
   position: absolute;
   top: 0;
+  pointer-events: none;
 
   &.small {
     &.vertical {
